Call Microsft.Graph from app Refactor Program.cs Add Razor runtime compilation Fix Layout style

--- a/MathsQuizApp/appsettings.json
+++ b/MathsQuizApp/appsettings.json
@@ -20,6 +20,10 @@
     "BaseUrl": "https://graph.microsoft.com/v1.0",
     "Scopes": "user.read"
   },
+  "MicrosoftGraph": {
+    "BaseUrl": "https://graph.microsoft.com/v1.0",
+    "Scopes": "user.read"
+  },
   "MathsQuizApi": {
     /*
      'Scopes' contains space separated scopes of the Web API you want to call. This can be:
