--- a/.editorconfig
+++ b/.editorconfig
@@ -37,6 +37,10 @@ dotnet_style_prefer_conditional_expression_over_return = true:silent
 tab_width = 2
 indent_size = 2
 
+[*.css]
+tab_width = 2
+indent_size = 2
+
 [*.{cs,vb}]
 #### Naming styles ####
 
